<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao" />

    <EditText
        android:id="@+id/textDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor" />

    <EditText
        android:id="@+id/textValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data" />

    <EditText
        android:id="@+id/textData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
	
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cliente" />

    <EditText
        android:id="@+id/textCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone" />

    <EditText
        android:id="@+id/textTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine" />

    
     <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pago" />
    
     
    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
     
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar" />

        <Button
            android:id="@+id/btnListar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listar" />
        
    </LinearLayout>

</LinearLayout>