<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/titulo_detalhe"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cliente"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textCliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ToggleButton
        android:id="@+id/btnPago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>